--- a/templates/applications/router.yaml
+++ b/templates/applications/router.yaml
@@ -176,6 +176,9 @@ spec:
         {{- end }}
         - name: router-log
           mountPath: /var/log/nginx
+        {{- with .Values.router.extraVolumeMounts }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
       volumes:
       - name: init-scripts
         configMap:
@@ -196,6 +199,9 @@ spec:
       - name: confd-file
         configMap:
           name: {{ .Values.router.extraConf.confd.configMap }}
+      {{- end }}
+      {{- with .Values.router.extraVolumes }}
+      {{- toYaml . | nindent 6 }}
       {{- end }}
       - name: router-log
         persistentVolumeClaim:
