--- a/templates/applications/healthchecks.yaml
+++ b/templates/applications/healthchecks.yaml
@@ -149,6 +149,12 @@ spec:
         livenessProbe: {{- omit .Values.healthchecks.livenessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
         resources: {{- toYaml .Values.healthchecks.resources | nindent 10 }}
+        {{ if .Values.healthchecks.extraEnvVars }}
+        env:
+        {{- with .Values.healthchecks.extraEnvVars }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- end }}
         envFrom:
         - configMapRef:
             name: healthchecks
@@ -159,7 +165,13 @@ spec:
           mountPath: /var/www/products/ASC.Files/server/
         - name: people-data
           mountPath: /var/www/products/ASC.People/server/
+        {{- with .Values.healthchecks.extraVolumeMounts }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
       volumes:
+      {{- with .Values.healthchecks.extraVolumes }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
       - name: docspace-data
         persistentVolumeClaim:
           claimName: {{ template "docspace.pvc.data.name" . }}
