--- a/templates/applications/identity-api.yaml
+++ b/templates/applications/identity-api.yaml
@@ -152,9 +152,25 @@ spec:
             secretKeyRef:
               name: {{ .Release.Name }}-broker-uri
               key: broker_uri
+        {{- with .Values.identity.api.extraEnvVars }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
         envFrom:
         - configMapRef:
             name: docspace
         - configMapRef:
             name: identity
+        {{ if .Values.identity.api.extraVolumeMounts }}
+        volumeMounts:
+        {{- with .Values.identity.api.extraVolumeMounts }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- end }}
+      {{ if .Values.identity.api.extraVolumes}}
+      volumes:
+      {{- with .Values.identity.api.extraVolumes }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
+      {{- end }}
+
 {{- end }}
