--- a/templates/applications/identity.yaml
+++ b/templates/applications/identity.yaml
@@ -152,9 +152,24 @@ spec:
             secretKeyRef:
               name: {{ .Release.Name }}-broker-uri
               key: broker_uri
+        {{- with .Values.identity.authorization.extraEnvVars }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
         envFrom:
         - configMapRef:
             name: docspace
         - configMapRef:
             name: identity
+        {{ if .Values.identity.authorization.extraVolumeMounts}}
+        volumeMounts:
+        {{- with .Values.identity.authorization.extraVolumeMounts }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- end }}
+      {{ if .Values.identity.authorization.extraVolumes}}
+      volumes:
+      {{- with .Values.identity.authorization.extraVolumes }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
+      {{- end }}
 {{- end }}
