Add HPA Co-authored-by: Valeria Bagisheva <valeriya.bagisheva@onlyoffice.com> Co-committed-by: Valeria Bagisheva <valeriya.bagisheva@onlyoffice.com>

--- a/templates/applications/backup-background-tasks.yaml
+++ b/templates/applications/backup-background-tasks.yaml
@@ -14,7 +14,9 @@ metadata:
   annotations: {{- include "docspace.annotations" ( dict "keyName" $dictValue "context" $ ) | nindent 4 }}
   {{- end }}
 spec:
+  {{- if not .Values.backupBackgroundTasks.autoscaling.enabled }}
   replicas: {{ .Values.backupBackgroundTasks.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
       app: backup-background-tasks
