--- a/templates/applications/identity-api.yaml
+++ b/templates/applications/identity-api.yaml
@@ -15,7 +15,9 @@ metadata:
   annotations: {{- include "docspace.annotations" ( dict "keyName" $dictValue "context" $ ) | nindent 4 }}
   {{- end }}
 spec:
+  {{- if not .Values.identity.api.autoscaling.enabled }}
   replicas: {{ .Values.identity.api.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
       app: identity-api
