--- a/templates/applications/proxy-frontend.yaml
+++ b/templates/applications/proxy-frontend.yaml
@@ -14,7 +14,9 @@ metadata:
   annotations: {{- include "docspace.annotations" ( dict "keyName" $dictValue "context" $ ) | nindent 4 }}
   {{- end }}
 spec:
+  {{- if not .Values.proxyFrontend.autoscaling.enabled }}
   replicas: {{ .Values.proxyFrontend.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
       app: proxy-frontend
