--- a/templates/applications/studio-notify.yaml
+++ b/templates/applications/studio-notify.yaml
@@ -14,7 +14,9 @@ metadata:
   annotations: {{- include "docspace.annotations" ( dict "keyName" $dictValue "context" $ ) | nindent 4 }}
   {{- end }}
 spec:
+  {{- if not .Values.studioNotify.autoscaling.enabled }}
   replicas: {{ .Values.studioNotify.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
       app: studio-notify
