Use a common parameter to set up the solution type Co-authored-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com> Co-committed-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com>

--- a/templates/configmaps/docspace.yaml
+++ b/templates/configmaps/docspace.yaml
@@ -49,7 +49,11 @@ data:
   {{- else }}
   APP_KNOWN_PROXIES: ""
   {{- end }}
-  INSTALLATION_TYPE: {{ .Values.connections.installationType | quote }}
+  {{- if .Values.global.installationType }}
+  INSTALLATION_TYPE: {{ include "docspace.installation.type" . | quote }}
+  {{- else }}
+  INSTALLATION_TYPE: {{ tpl .Values.connections.installationType . | quote }}
+  {{- end }}
   OAUTH_REDIRECT_URL: {{ .Values.connections.oauthRedirectURL | quote }}
   LOG_LEVEL: {{ .Values.log.level | quote }}
   DEBUG_INFO: {{ .Values.debug.enabled | quote }}
