--- a/values.yaml
+++ b/values.yaml
@@ -1,3 +1,10 @@
+# Global parameters for DocSpace and Docs
+#
+# global.installationType Defines solution type for DocSpace and Docs
+# Possible values are `COMMUNITY`, `DEVELOPER` or `ENTERPRISE`
+global:
+  installationType: "COMMUNITY"
+
 # Default values for subchart Onlyoffice Docs
 # ref: https://github.com/ONLYOFFICE/Kubernetes-Docs/blob/master/values.yaml
 #
@@ -88,24 +95,6 @@ docs:
   # By default, the jwt secret is used, which will be created with values from the jwt DocSpace
   jwt:
     existingSecret: "docspace-jwt"
-  # docs.docservice.image.repository Docservice container image repository
-  # Depending on your license type, add the suffix "-de" - Developer Edition or "-ee" Enterprise Edition
-  # By default - Community version
-  docservice:
-    image:
-      repository: onlyoffice/docs-docservice
-  # docs.proxy.image.repository Proxy container image repository
-  # Depending on your license type, add the suffix "-de" - Developer Edition or "-ee" Enterprise Edition
-  # By default - Community version
-  proxy:
-    image:
-      repository: onlyoffice/docs-proxy
-  # docs.converter.image.repository Converter container image repository
-  # Depending on your license type, add the suffix "-de" - Developer Edition or "-ee" Enterprise Edition
-  # By default - Community version
-  converter:
-    image:
-      repository: onlyoffice/docs-converter
   # docs.upgrade.job.enabled Enable the execution of job Docs pre-upgrade before upgrading
   # Set to `false` when upgrading to version `3.0.0` from earlier
   # When installing `3.0.0` and also when upgrading from version `3.0.0` to a later one, this parameter should be set to `true`
@@ -134,7 +123,7 @@ connections:
   # connections.envExtension Defines whether an environment will be used
   envExtension: ""
   # connections.installationType Defines solution type
-  installationType: COMMUNITY
+  installationType: "{{ .Values.global.installationType }}"
   # connections.migrationType Defines migration type
   migrationType: STANDALONE
   # connections.mysqlDatabaseMigration Enables database migration
