Add the ability to set up extraEnvFrom in identity containers Co-authored-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com> Co-committed-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com>

--- a/templates/applications/identity.yaml
+++ b/templates/applications/identity.yaml
@@ -170,6 +170,9 @@ spec:
             name: docspace
         - configMapRef:
             name: identity
+        {{- with .Values.identity.authorization.extraEnvFrom }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
         {{- if .Values.identity.authorization.extraVolumeMounts}}
         volumeMounts:
         {{- with .Values.identity.authorization.extraVolumeMounts }}
