--- a/templates/applications/identity-api.yaml
+++ b/templates/applications/identity-api.yaml
@@ -170,6 +170,9 @@ spec:
             name: docspace
         - configMapRef:
             name: identity
+        {{- with .Values.identity.api.extraEnvFrom }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
         {{- if .Values.identity.api.extraVolumeMounts }}
         volumeMounts:
         {{- with .Values.identity.api.extraVolumeMounts }}
