--- a/values.yaml
+++ b/values.yaml
@@ -3528,15 +3528,15 @@ identity:
 #
 langflow:
   # langflow.enabled Enables Langflow installation
-  enabled: true
+  enabled: false
   # langflow.secret Defines the secrets used for encryption and signature validation
   secret:
     ## langflow.secret.existingSecret Name of the existing secret file that must contain the variable 
-    ## SPRING_APPLICATION_ENCRYPTION_SECRET
+    ## LANGFLOW_SECRET_KEY
     ## If not specified, a new secret will be automatically generated.
     existingSecret: ""
     # langflow.secret.langflowSecretKey Key used for encrypting sensitive data like API keys
-    langflowSecretKey: "67576576"
+    langflowSecretKey: ""
   # DocSpace Langflow Backend application parameters
   # This block defines the parameters common to all the Pods of this application
   #
