--- a/templates/applications/identity.yaml
+++ b/templates/applications/identity.yaml
@@ -124,6 +124,8 @@ spec:
         ports:
         - containerPort: {{ .Values.identity.authorization.containerPorts.authorization }}
           name: authorization
+        - containerPort: {{ .Values.identity.authorization.containerPorts.grpc }}
+          name: grpc
         {{- if .Values.identity.authorization.startupProbe.enabled }}
         startupProbe: {{- omit .Values.identity.authorization.startupProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
@@ -149,6 +151,11 @@ spec:
             secretKeyRef:
               name: {{ template "docspace.redis.secretName" . }}
               key: {{ .Values.connections.redisSecretKeyName }}
+        - name: SPRING_APPLICATION_SIGNATURE_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: {{ template "docspace.coreMachineKey.secretName" . }}
+              key: APP_CORE_MACHINEKEY
         {{- if .Values.identity.brokerUriExistingSecret }}
         - name: RABBIT_URI
           valueFrom:
