--- a/templates/services/identity.yaml
+++ b/templates/services/identity.yaml
@@ -16,6 +16,9 @@ spec:
   - port: {{ .Values.identity.authorization.containerPorts.authorization }}
     name: authorization
     targetPort: {{ .Values.identity.authorization.containerPorts.authorization }}
+  - port: {{ .Values.identity.authorization.containerPorts.grpc }}
+    name: grpc
+    targetPort: {{ .Values.identity.authorization.containerPorts.grpc }}
   selector:
     app: identity-authorization
     {{- if .Values.commonLabels }}
